# textual-gittui

./: README.md  example.py  flake.nix  pyproject.toml
pkgs/nix/: package.nix
src/textual_gittui/: __init__.py  main.py
src/thalia/: __main__.py  binding_loader.py  cli.py  config.py  main.py
src/thalia/tui/: app.py
src/thalia/tui/screens/: dashboard.py  workspace.py
