[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textual-gittui"
version = "0.1.0"
description = "A terminal-based Git UI built with Textual"
authors = [{name = "Narendra S", email = "narendra.s1232@gmail.com"}, {name = "Varghese K James"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.41.0",
    "pygit2>=1.13.0",
]

[project.scripts]
textual-gittui = "textual_gittui.main:main"

[project.optional-dependencies]
dev = [
    "textual-dev>=1.2.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/textual_gittui"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
