[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textual-thalia"
version = "0.0.1"
description = "A terminal-based Git UI built with Textual"
authors = [{name = "Narendra S", email = "narendra.s1232@gmail.com"}, {name = "Varghese K James", email = "vicfic@pm.me"}]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "textual==5.0.1",
    "pygit2==1.18.0",
    "platformdirs==4.3.8",
    "pydantic==2.11.7",
    "pydantic-settings[toml]==2.10.1",
    "click==8.2.1",
    "click-default-group==1.2.4",
    "textual-fspicker==0.4.1",
]
keywords = ["tui", "client", "terminal", "textual", "cli", "gittui", "git", "developer-tool"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Software Development :: Version Control :: Git"
]

[project.urls]
Homepage = "https://github.com/totalyenglizlitrate/textual-thalia"
Repository = "https://github.com/totalyenglizlitrate/textual-thalia"
Issues = "https://github.com/totalyenglizlitrate/textual-thalia/issues"

[project.scripts]
thalia = "thalia.cli:cli"

[project.optional-dependencies]
dev = [
    "textual-dev==1.7.0",
    "black==25.1.0",
    "mypy==1.17.0",
    "ruff==0.12.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/thalia"]

[tool.black]
line-length = 120
target-version = ["py312", "py313"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
